methods.basics.Methods.scala.error
Erreur de compilation :
Methods:8: error: not found: value avances
    avances;
    ^