methods.basics.Methods.scala.code
def goAndGet() {
  var nbpas:Int =0;
  while (!estSurBiscuit){
    avance;
  }
  prendBiscuit;
  for (i<-1 to nbpas) {
    avances;
  }
  poseBiscuit;
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}